--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,8 +40,6 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  display: flex;
-  flex-direction: column;
   scroll-behavior: smooth;
 }
 
